# ProteinMPNN

./: protein_mpnn_run.py  protein_mpnn_utils.py  pyproject.toml
helper_scripts/other_tools/: make_pssm_dict.py
proteinmpnn/: protein_mpnn_run.py  protein_mpnn_utils.py
proteinmpnn/training/: training.py
vanilla_proteinmpnn/: protein_mpnn_run.py  protein_mpnn_utils.py
vanilla_proteinmpnn/helper_scripts/other_tools/: make_pssm_dict.py
