[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "ProteinMPNN"
version = "24.0.0"
author = "Justas Dauparas <>"
readme = 'README.md'
license = 'LICENSE'

[tool.poetry.dependencies]
python = "^3.9"
torch = "*"
torchvision = "*"
torchaudio = "*"
