[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "ProteinMPNN"
version = "24.0.0"
description = "Fork of code from the paper: Robust deep learning-based protein sequence design using ProteinMPNN"
authors = ["Justas Dauparas <>"]
readme = 'README.md'
license = 'LICENSE'

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"
